jailhouse: Update debianization to be ready for Debian 11
Debian 11 started to remove python2 support, so we need to update the
(build-)dependencies to python3. As python3 is already provided by
Debian 10, there is no breaking change.

Signed-off-by: Florian Bezdeka <florian.bezdeka@siemens.com>
[Jan: adjusted wording of commit message]
Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-core/non-root-initramfs/files/debian/control
+++ b/recipes-core/non-root-initramfs/files/debian/control
@@ -2,7 +2,7 @@ Source: non-root-initramfs
 Section: misc
 Priority: optional
 Standards-Version: 4.3.0
-Build-Depends: wget, cpio, unzip, rsync, python:native, bc
+Build-Depends: wget, cpio, unzip, rsync, python3:native, bc
 Maintainer: Jan Kiszka <jan.kiszka@siemens.com>
 Rules-Requires-Root: no
 
