linux-jailhouse: Update to 5.15
Move to the next LTS kernel. This allows to drop 2 fix-ups for Ultra96.

Along the kernel update, the RPi4 alias overlay needs to be adjusted as
the kernel renamed nodes in the target device tree.

Furthermore, we need to disable CONFIG_SUSPEND on x86 for the sake of
the non-root Linux cell. Otherwise, an unsupported access to
MSR_AMD64_DE_CFG would be triggered on Intel CPUs.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-bsp/rpi-firmware/files/debian/aliases.dts
+++ b/recipes-bsp/rpi-firmware/files/debian/aliases.dts
@@ -1,7 +1,7 @@
 /*
  * Jailhouse, a Linux-based partitioning hypervisor
  *
- * Copyright (c) Siemens AG, 2021
+ * Copyright (c) Siemens AG, 2021-2022
  *
  * Authors:
  *  Jan Kiszka <jan.kiszka@siemens.com>
@@ -22,8 +22,8 @@
 				uart1 = "/soc/serial@7e215040";
 
 				/* Ensure stable /dev/mmcblk0 assignment */
-				mmc0 = "/emmc2bus/emmc2@7e340000";
-				mmc1 = "/soc/sdhci@7e300000";
+				mmc0 = "/emmc2bus/mmc@7e340000";
+				mmc1 = "/soc/mmc@7e300000";
 			};
 		};
 	};
